Fixed issue with default coverr css making everything shaded darker on mobile

--- a/style.scss
+++ b/style.scss
@@ -132,7 +132,7 @@ h2 {
 .video-container .filter {
     z-index: 100;
     position: absolute;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.0);
     width: 100%;
 }
 .video-container video {
